--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 group = 'de.spinscale.elasticsearch.plugin.ingest'
-version = '5.1.1.1-SNAPSHOT'
+version = '5.1.1.1'
 
 apply plugin: 'java'
 apply plugin: 'elasticsearch.esplugin'
