--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   }
 }
 
-group = 'de.spinscale.elasticsearch.plugin.ingest'
+group = 'de.spinscale.elasticsearch.plugin'
 version = '5.1.1.1'
 
 apply plugin: 'java'
