--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.elasticsearch.gradle:build-tools:5.5.2"
+    classpath "org.elasticsearch.gradle:build-tools:5.6.0"
   }
 }
 
@@ -15,7 +15,7 @@ plugins {
 }
 
 group = 'de.spinscale.elasticsearch.plugin'
-version = '5.5.2.1-SNAPSHOT'
+version = '5.6.0.1-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'elasticsearch.esplugin'
@@ -23,10 +23,22 @@ apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
+// this is temporal and will be fixed in 6.0
+ext.projectSubstitutions = [:]
+
+// license of this project
+licenseFile = rootProject.file('LICENSE.txt')
+// copyright notices
+noticeFile = rootProject.file('NOTICE.txt')
+
 esplugin {
   name 'ingest-langdetect'
   description 'Ingest processor doing language detection for fields'
   classname 'org.elasticsearch.plugin.ingest.langdetect.IngestLangDetectPlugin'
+  // license of the plugin, may be different than the above license
+  licenseFile rootProject.file('LICENSE.txt')
+  // copyright notices, may be different than the above notice
+  noticeFile rootProject.file('NOTICE.txt')
 }
 
 // In this section you declare the dependencies for your production and test code
