--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.elasticsearch.gradle:build-tools:6.5.1"
+    classpath "org.elasticsearch.gradle:build-tools:${elasticsearchVersion}"
   }
 }
 
@@ -18,7 +18,7 @@ plugins {
 }
 
 group = 'de.spinscale.elasticsearch.plugin'
-version = '6.5.1.1-SNAPSHOT'
+version = "${elasticsearchVersion}.1-SNAPSHOT"
 
 apply plugin: 'java'
 apply plugin: 'idea'
