--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ plugins {
   id "co.riiid.gradle" version "0.4.2"
 }
 
+// remove this again after 7.3.0
+configurations.all {
+  resolutionStrategy.dependencySubstitution {
+    substitute project(':rest-api-spec') with module ("org.elasticsearch:rest-api-spec:${elasticsearchVersion}")
+  }
+}
+
 group = 'de.spinscale.elasticsearch.plugin'
 version = "${elasticsearchVersion}.1-SNAPSHOT"
 
