--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,6 @@ plugins {
   id "co.riiid.gradle" version "0.4.2"
 }
 
-// remove this again after 7.3.0
-configurations.all {
-  resolutionStrategy.dependencySubstitution {
-    substitute project(':rest-api-spec') with module ("org.elasticsearch:rest-api-spec:${elasticsearchVersion}")
-  }
-}
-
 group = 'de.spinscale.elasticsearch.plugin'
 version = "${elasticsearchVersion}.1-SNAPSHOT"
 
@@ -34,6 +27,12 @@ apply plugin: 'elasticsearch.esplugin'
 licenseFile = rootProject.file('LICENSE.txt')
 // copyright notices
 noticeFile = rootProject.file('NOTICE.txt')
+
+// remove this again after 7.3.1
+configurations.restSpec.withDependencies { dependencies ->
+  dependencies.clear()
+  dependencies.add(project.dependencies.create("org.elasticsearch:rest-api-spec:7.3.1"))
+}
 
 esplugin {
   name 'ingest-langdetect'
