Update to Elasticsearch 7.5.0

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+// remove this two imports from 7.5.1 onwards
+import org.elasticsearch.gradle.testclusters.TestClustersRegistry
+import org.elasticsearch.gradle.testclusters.TestClustersPlugin
 import java.nio.file.Files
 
 buildscript {
@@ -69,3 +72,15 @@ githubRelease.doFirst {
     assets = [ filename ]
   }
 }
+
+// remove all these lines till EOF with the release of 7.5.1
+configurations.whenObjectAdded { c ->
+  if (c.name == 'elasticsearch_7.5.0_integ_test_zip_null') {
+    project.dependencies.add('elasticsearch_7.5.0_integ_test_zip_null', 'org.elasticsearch.distribution.integ-test-zip:elasticsearch:7.5.0@zip')
+  }
+}
+
+TestClustersRegistry registry = project.rootProject.extensions.create("testClustersRegistry", TestClustersRegistry)
+TestClustersPlugin.configureClaimClustersHook(project.gradle, registry)
+TestClustersPlugin.configureStartClustersHook(project.gradle, registry)
+TestClustersPlugin.configureStopClustersHook(project.gradle, registry)
