--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-// remove this two imports from 7.5.1 onwards
-import org.elasticsearch.gradle.testclusters.TestClustersRegistry
-import org.elasticsearch.gradle.testclusters.TestClustersPlugin
 import java.nio.file.Files
 
 buildscript {
@@ -25,6 +22,13 @@ version = "${elasticsearchVersion}.1-SNAPSHOT"
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'elasticsearch.esplugin'
+
+// remove this in 7.6.2
+restResources {
+  restApi {
+    includeCore '*'
+  }
+}
 
 // license of this project
 licenseFile = rootProject.file('LICENSE.txt')
