--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,8 @@ version = "${elasticsearchVersion}.1-SNAPSHOT"
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'elasticsearch.esplugin'
-
-// remove this in 7.6.2
-restResources {
-  restApi {
-    includeCore '*'
-  }
-}
+apply plugin: 'elasticsearch.testclusters'
+apply plugin: 'elasticsearch.rest-resources'
 
 // license of this project
 licenseFile = rootProject.file('LICENSE.txt')
