--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
 plugins {
   id "co.riiid.gradle" version "0.4.2"
+  id "com.github.ben-manes.versions" version '0.33.0'
 }
 
 group = 'de.spinscale.elasticsearch.plugin'
