--- a/build.gradle
+++ b/build.gradle
@@ -38,12 +38,12 @@ esplugin {
   noticeFile rootProject.file('NOTICE.txt')
 }
 
-validateNebulaPom.enabled = false
+validateElasticPom.enabled = false
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-  compile 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
-  compile 'net.arnx:jsonic:1.3.10'
+  implementation 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
+  implementation 'net.arnx:jsonic:1.3.10'
   // the yaml tests require a log4j2 dependency, otherwise a dependency is thrown on startup
   yamlRestTestImplementation 'org.apache.logging.log4j:log4j-core:2.11.1'
 }
