Change gradle github release plugin

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
 }
 
 plugins {
-  id "co.riiid.gradle" version "0.4.2"
+  // the old co.riiid.gradle is not gradle 7.0 compatible
+  id "com.github.humblerookie.gradle" version "0.4.4"
   id "com.github.ben-manes.versions" version '0.36.0'
 }
 
