Fix release branch for github release plugin

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ githubRelease.doFirst {
     token = System.getProperty('GITHUB_TOKEN')
     tagName = currentVersion
     assets = [ filename ]
+    targetCommitish = 'main'
   }
 }
 
