Fix github release due to moving to main branch

--- a/build.gradle
+++ b/build.gradle
@@ -66,5 +66,6 @@ githubRelease.doFirst {
     token = System.getProperty('GITHUB_TOKEN')
     tagName = currentVersion
     assets = [ filename ]
+    targetCommitish = 'main'
   }
 }
