--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 import java.nio.file.Files
 import org.elasticsearch.gradle.testclusters.StandaloneRestIntegTestTask
+import org.elasticsearch.gradle.test.SystemPropertyCommandLineArgumentProvider;
 import org.gradle.api.tasks.Input;
 import org.gradle.process.CommandLineArgumentProvider;
 
@@ -52,14 +53,6 @@ configurations {
   }
 }
 
-// In this section you declare the dependencies for your production and test code
-dependencies {
-  implementation 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
-  implementation 'net.arnx:jsonic:1.3.10'
-  // the yaml tests require a log4j2 dependency, otherwise a dependency is thrown on startup
-  runtimeOnly 'org.apache.logging.log4j:log4j-core:2.11.1'
-}
-
 // ignore javadoc warnings for now
 tasks.withType(Javadoc) {
   options.addStringOption('Xdoclint:none', '-quiet')
@@ -88,7 +81,6 @@ githubRelease.doFirst {
     targetCommitish = 'main'
   }
 }
-
 
 // setup yaml rest tests
 testClusters {
@@ -139,38 +131,12 @@ tasks.register('yamlRestTest', StandaloneRestIntegTestTask) { testTask ->
 check.dependsOn 'yamlRestTest'
 
 dependencies {
-  yamlRestTestImplementation "org.elasticsearch.test:framework:$elasticsearchVersion"
+  implementation 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
+  implementation 'net.arnx:jsonic:1.3.10'
+  // the yaml tests require a log4j2 dependency, otherwise a dependency is thrown on startup
+  runtimeOnly 'org.apache.logging.log4j:log4j-core:2.11.1'
+  testImplementation "org.elasticsearch.test:framework:$elasticsearchVersion"
   restTestSpecs "org.elasticsearch:rest-api-spec:$elasticsearchVersion"
 }
 
-// This will be available in 7.15 in build tools and not manually declared. 
-public class SystemPropertyCommandLineArgumentProvider implements CommandLineArgumentProvider {
-    private final Map<String, Object> systemProperties = new LinkedHashMap<>();
 
-    public void systemProperty(String key, Supplier<String> value) {
-        systemProperties.put(key, value);
-    }
-
-    public void systemProperty(String key, Object value) {
-        systemProperties.put(key, value);
-    }
-
-    @Override
-    public Iterable<String> asArguments() {
-        return systemProperties.entrySet()
-            .stream()
-            .map(
-                entry -> "-D"
-                    + entry.getKey()
-                    + "="
-                    + (entry.getValue() instanceof Supplier ? ((Supplier) entry.getValue()).get() : entry.getValue())
-            )
-            .collect(Collectors.toList());
-    }
-
-    // Track system property keys as an input so our build cache key will change if we add properties but values are still ignored
-    @Input
-    public Iterable<String> getPropertyNames() {
-        return systemProperties.keySet();
-    }
-}
